# github-sync

./: Cargo.toml  README.md  README.vi.md
scripts/: install.sh
src/: config.rs  daemon.rs  main.rs  state.rs  sync.rs  web.rs  web_ui.html
